--- a/views/account.html
+++ b/views/account.html
@@ -44,6 +44,8 @@
             <p class="account">
                 <b>Deposit Address:</b>
                 <span>{{=it.user.deposit_address}}</span>
+                <br/>
+                <strong>You must attach a message with this number: {{=it.user.id}}</strong>
             </p>
             <div class="row">
                 <div class="large-5 columns">
