--- a/views/faq.html
+++ b/views/faq.html
@@ -9,9 +9,9 @@
         <div class="faq-nav">
             <ul class="side-nav">
                 <li><a href="#how-to-play">How to play?</a></li>
-                <li><a href="#bits">What is a bit?</a></li>
-                <li><a href="#giveaway">How can I get free bits?</a></li>
-                <li><a href="#deposit">How do I deposit bits?</a></li>
+                <li><a href="#nxt">What is a NXT?</a></li>
+                <li><a href="#giveaway">How can I get free NXT?</a></li>
+                <li><a href="#deposit">How do I deposit NXT?</a></li>
                 <li><a href="#deposit-address">How long is the deposit address valid for?</a></li>
                 <li><a href="#deposit-time">How long for deposits to be credited to account?</a></li>
                 <li><a href="#withdraw">How do I withdraw bits?</a></li>
@@ -33,11 +33,11 @@
     <div class="columns large-9">
         <dl>
             <h3 id="basics">Basics</h3>
-            <dd><b><a name="bitcoin-gambling"></a>What is bitcoin gambling?</b>
+            <dd><b><a name="nxt-gambling"></a>What is NXT gambling?</b>
                 <p>
-                    Bitcoin gambling is a general term for any type of gambling wherein bets are placed in units of
-                    bitcoins as opposed to a fiat currency or any other asset. Learn more about
-                    <a href="bitcoin-gambling">bitcoin gambling</a> or the history of <a href="online-gambling-meets-bitcoin">online gambling and bitcoin</a>.
+                    NXT gambling is a general term for any type of gambling wherein bets are placed in units of
+                    NXT as opposed to a fiat currency, Bitcoin or any other asset. Learn more about
+                    <a href="nxt-gambling">NXT gambling</a> or the history of <a href="online-gambling-meets-bitcoin">online gambling and bitcoin</a>.
                 </p>
             </dd>
 
@@ -49,24 +49,25 @@
                 </p>
             </dd>
             <dd>
-                <b><a name="bits"></a>What is a bit?</b>
+                <b><a name="nxt"></a>What is a NXT?</b>
                 <p>
-                    A bit is a millionth of a bitcoin or 100 satoshis. At the time of this writing, a single bit is worth roughly $0.0003 USD.
-                    You are able to deposit and withdraw bits at any time by going to your <a href="/account">account page</a>.
+                    A NXT is the basic Unit of the NXT-Currency. At the time of this writing, a single NXT is worth roughly $0.0094 USD. A NXT is divisible 100,000,000 times to 1 NXTquant or 0.00000001 NXT.
+                    You are able to deposit and withdraw NXT at any time by going to your <a href="/account">account page</a>.
                 </p>
             </dd>
             <dd>
-                <b><a name="giveaway"></a>How can I get free bits?</b>
+                <b><a name="giveaway"></a>How can I get free NXT?</b>
                 <p>
-                    Every hour you can claim 2 free bits on your account page. We do this so that you may test and enjoy the game
+                    Every minute you can claim 0.02 free NXT on your account page. We do this so that you may test and enjoy the game
                     without any commitment. There are no strings attached, you may withdraw this money if you so please, but
                     we ask you to refrain from abusing this feature =)
                 </p>
             </dd>
              <h3>Deposits</h3>
             <dd>
-                <b><a name="deposit"></a>How do I deposit bits?</b>
+                <b><a name="deposit"></a>How do I deposit NXT?</b>
                 <p>
+                    NEEDS EDITING!!!!!
                     You will need to transfer bitcoins to the deposit address on your account page. If you do not have any bitcoins,
                     we can recommend <a href="https://coinbase.com">Coinbase</a> if you are in the US (although the registration process
                     is lengthy). Another great option is <a href="https://localbitcoins.com/">LocalBitcoins.com</a>, which lists traders in your area
@@ -78,6 +79,7 @@
             <dd>
                 <b><a name="deposit-address"></a>How long is the deposit address valid?</b>
                 <p>
+                    NEEDS EDITING
                     It is <strong>permanently</strong> attached to your account. You can save it, or use it for automatic
                     funding, or whatever else you like. All payments to this address will be automatically credited to your account.
                 </p>
@@ -85,13 +87,13 @@
             <dd>
                 <b><a name="deposit-time"></a>How long do deposits take to be credited?</b>
                 <p>
-                    We instantly credit accounts upon a single confirmation, which on average is approximately 10 minutes from the time of the transaction.
+                    We instantly credit accounts upon a single confirmation, which on average is approximately 2 minutes from the time of the transaction.
                 </p>
             </dd>
             <dd>
-                <b><a name="withdraw"></a>How do I withdraw bits?</b>
+                <b><a name="withdraw"></a>How do I withdraw NXT?</b>
                 <p>
-                    On your account page, you can transfer bits to any bitcoin address you want. Small withdrawals
+                    On your account page, you can transfer NXT to any NXT address you want. Small withdrawals
                     (i.e. smaller than the balance of our hot-wallet) are processed instantly and you will be given the transaction ID immediately.
                 </p>
                 <p>
@@ -100,11 +102,12 @@
                     depending on the time of day and other circumstances.
                 </p>
                 <p>
-                    We remove 100 bits (about 0.05 USD) from any withdrawal amount to cover mining fees. We charge this amount
+                    We remove 1 NXT (about 0.0094 USD) from any withdrawal amount to cover transaction fees. We charge this amount
                     <strong>regardless</strong> of the actual mining fees attached to the transaction, which may be more or less
                     than this, depending on the block competition at the time of your withdrawal.
                 </p>
                 <p>
+                    NEEDS EDITING
                     Withdrawals must be in increments of 1 bit (100 satoshis), with a minimum withdrawal of 200 bits (of which 100 bits
                     goes towards the mining fee). As required, we will chip in our own money to help expedite confirmation time, such that
                     we typically pay 200 bits in mining fees, despite charging you only 100 bits.
@@ -136,39 +139,41 @@
             <dd>
                 <b><a name="limit"></a>What is the most I can bet?</b>
                 <p>
+                    NEEDS EDITING
                     We currently have a bet limit of 1,000,000 bits (1 BTC).
                 </p>
             </dd>
             <dd>
                 <b><a name="last"></a>What is the bonus?</b>
                 <p>
+                    NEEDS EDITING
                     The bonus is a special prize that is awarded to the last people to cash out before the game busted. Getting the bonus
                     is critical to skillful playing of bustabit, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
-                <p>1% of each player's stake goes into the bonus pot. So if there are 4 players, betting 400, 300, 200, and 100, there will be 10 bits in the pot.
-                    If the biggest player wins, he gets the whole pot. The site works out the rate he would be getting if he won, ie. 400 bits bet gives 10 bits bonus
-                    - or 1/40th bonus per bit bet. It then applies the same rate to whoever actually wins.
+                <p>1% of each player's stake goes into the bonus pot. So if there are 4 players, betting 400, 300, 200, and 100, there will be 10 NXT in the pot.
+                    If the biggest player wins, he gets the whole pot. The site works out the rate he would be getting if he won, ie. 400 NXT bet gives 10 NXT bonus
+                    - or 1/40th bonus per NXT bet. It then applies the same rate to whoever actually wins.
                 </p>
-                <p>So if the 100 bit player wins, he gets 1/40th of 100, or 2.5 bits. That leaves 7.5 bits in the pot,
+                <p>So if the 100 NXT player wins, he gets 1/40th of 100, or 2.5 NXT. That leaves 7.5 NXT in the pot,
                     which goes to the next best placing player(s).
                 </p>
-                <p>Suppose the 200 bit player comes 2nd. He is due 1/40th of 200, or 5 bits. There are still 7.5 bits in the pot,
-                    so he gets the full 5 bits he is due - the same as if he had come in 1st place.
+                <p>Suppose the 200 NXT player comes 2nd. He is due 1/40th of 200, or 5 NXT. There are still 7.5 NXT in the pot,
+                    so he gets the full 5 NXT he is due - the same as if he had come in 1st place.
                 </p>
                 <p>
-                    Suppose the 300 bit player comes 3rd. He's due 7.5 bits (300/40) but there are only 2.5 bits left in the pot, so he gets those and that's all. There's nothing left for the 4th or worse place players.
+                    Suppose the 300 NXT player comes 3rd. He's due 7.5 NXT (300/40) but there are only 2.5 NXT left in the pot, so he gets those and that's all. There's nothing left for the 4th or worse place players.
                 </p>
                 <p>
-                    1% of games will instant bust (0x) and no bonuses will be awarded, all other games have bonuses equal to 1% of the amount wagered.
+                    1.5% of games will instant bust (0x) and no bonuses will be awarded, all other games have bonuses equal to 1% of the amount wagered.
                 </p>
             </dd>
             <h3>Fairness</h3>
             <dd>
                 <b><a name="odds"></a>What are the game odds?</b>
                 <p>
-                    The house margin is scaled between 0 and 1 %, depending on how long you hold. An additional 1 % is effectively
+                    The house margin is scaled between 0 and 1.5 %, depending on how long you hold. An additional 1 % is effectively
                     taken from every bet and put into the <a href="#bonus">bonus pool</a>, which is distributed in its entirety
-                    every game. As a consequence, skilless or random play has—at worst—an expected return of -2 %, but it is possible to overcome
+                    every game. As a consequence, skilless or random play has—at worst—an expected return of -2.5 %, but it is possible to overcome
                     the house margin by skillfully getting bonuses.
                 </p>
                 <p>
@@ -179,12 +184,13 @@
                     play (hold until you're a millionaire). All games are <a href="#fair">provably fair</a>.
                 </p>
                 <p>
+                    NEEDS EDITING
                     The exact formula for the houses expected return is:<br />
                     <code>1 % * (intendedCashOut - roomAmount) * (roomAmount / intendedCashOut)</code><br />
                     But to really get a good sense of how this affects you, please use our handy <a href="/calculator">odds calculator</a>.
                 </p>
                 <p>
-                    The other important thing to keep in mind is that every game has a 1 % chance of instantly busting. We do not make
+                    The other important thing to keep in mind is that every game has a 1.5 % chance of instantly busting. We do not make
                     <strong>any</strong> money on it, but rather use this to fund the bonus scheme. This is an important consideration to make if you
                     are playing in such a way that you never win the bonus.
                 </p>
