Reversed some changes

--- a/views/faq.html
+++ b/views/faq.html
@@ -9,7 +9,7 @@
         <div class="faq-nav">
             <ul class="side-nav">
                 <li><a href="#how-to-play">How to play?</a></li>
-                <li><a href="#nxt">What is a NXT?</a></li>
+                <li><a href="#bits">What is a NXT?</a></li>
                 <li><a href="#giveaway">How can I get free NXT?</a></li>
                 <li><a href="#deposit">How do I deposit NXT?</a></li>
                 <li><a href="#deposit-address">How long is the deposit address valid for?</a></li>
@@ -33,11 +33,11 @@
     <div class="columns large-9">
         <dl>
             <h3 id="basics">Basics</h3>
-            <dd><b><a name="nxt-gambling"></a>What is NXT gambling?</b>
+            <dd><b><a name="bitcoin-gambling"></a>What is NXT gambling?</b>
                 <p>
                     NXT gambling is a general term for any type of gambling wherein bets are placed in units of
                     NXT as opposed to a fiat currency, Bitcoin or any other asset. Learn more about
-                    <a href="nxt-gambling">NXT gambling</a> or the history of <a href="online-gambling-meets-bitcoin">online gambling and bitcoin</a>.
+                    <a href="bitcoin-gambling">NXT gambling</a> or the history of <a href="online-gambling-meets-bitcoin">online gambling and bitcoin</a>.
                 </p>
             </dd>
 
@@ -49,7 +49,7 @@
                 </p>
             </dd>
             <dd>
-                <b><a name="nxt"></a>What is a NXT?</b>
+                <b><a name="bits"></a>What is a NXT?</b>
                 <p>
                     A NXT is the basic Unit of the NXT-Currency. At the time of this writing, a single NXT is worth roughly $0.0094 USD. A NXT is divisible 100,000,000 times to 1 NXTquant or 0.00000001 NXT.
                     You are able to deposit and withdraw NXT at any time by going to your <a href="/account">account page</a>.
