Another FAQ NXT update

--- a/views/faq.html
+++ b/views/faq.html
@@ -107,10 +107,8 @@
                     than this, depending on the block competition at the time of your withdrawal.
                 </p>
                 <p>
-                    NEEDS EDITING
-                    Withdrawals must be in increments of 1 bit (100 satoshis), with a minimum withdrawal of 200 bits (of which 100 bits
-                    goes towards the mining fee). As required, we will chip in our own money to help expedite confirmation time, such that
-                    we typically pay 200 bits in mining fees, despite charging you only 100 bits.
+                   The minimum withdrawal amount is 1.00000001 NXT. Please remember that 1 NXT fee will be deducted, so if you
+                   withdraw the minimum amount, you will only receive 0.00000001 NXT! I would not advise doing that.
                 </p>
             </dd>
             <dd>
@@ -139,14 +137,12 @@
             <dd>
                 <b><a name="limit"></a>What is the most I can bet?</b>
                 <p>
-                    NEEDS EDITING
-                    We currently have a bet limit of 1,000,000 bits (1 BTC).
+                    This depends on the house bankroll and is changing constanly. Just go to "Play" and check it out yourself.
                 </p>
             </dd>
             <dd>
                 <b><a name="last"></a>What is the bonus?</b>
                 <p>
-                    NEEDS EDITING
                     The bonus is a special prize that is awarded to the last people to cash out before the game busted. Getting the bonus
                     is critical to skillful playing of bustabit, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
@@ -164,7 +160,7 @@
                     Suppose the 300 NXT player comes 3rd. He's due 7.5 NXT (300/40) but there are only 2.5 NXT left in the pot, so he gets those and that's all. There's nothing left for the 4th or worse place players.
                 </p>
                 <p>
-                    1.5% of games will instant bust (0x) and no bonuses will be awarded, all other games have bonuses equal to 1% of the amount wagered.
+                    1% of games will instant bust (0x) and no bonuses will be awarded, all other games have bonuses equal to 1% of the amount wagered.
                 </p>
             </dd>
             <h3>Fairness</h3>
@@ -184,13 +180,12 @@
                     play (hold until you're a millionaire). All games are <a href="#fair">provably fair</a>.
                 </p>
                 <p>
-                    NEEDS EDITING
                     The exact formula for the houses expected return is:<br />
-                    <code>1 % * (intendedCashOut - roomAmount) * (roomAmount / intendedCashOut)</code><br />
+                    <code>1.5 % * (intendedCashOut - roomAmount) * (roomAmount / intendedCashOut)</code><br />
                     But to really get a good sense of how this affects you, please use our handy <a href="/calculator">odds calculator</a>.
                 </p>
                 <p>
-                    The other important thing to keep in mind is that every game has a 1.5 % chance of instantly busting. We do not make
+                    The other important thing to keep in mind is that every game has a 1 % chance of instantly busting. We do not make
                     <strong>any</strong> money on it, but rather use this to fund the bonus scheme. This is an important consideration to make if you
                     are playing in such a way that you never win the bonus.
                 </p>
@@ -218,26 +213,26 @@
                     house edge.
                 </p>
                 <p>
-                    Fourth, it takes 1% off the multiplier and adds on 0.01x:
+                    Fourth, it takes 1.5% off the multiplier and adds on 0.015x:
                 </p>
                 <p>
                     So half the time (other than 0x bust which we can ignore because
-                    they pay for themselves with the bonus) the multiplier will be 1.99x
+                    they pay for themselves with the bonus) the multiplier will be 1.985x
                     or more.
                 </p>
                 <p>
-                    That means if we bet 1.99x we have a 50% chance of winning (again,
+                    That means if we bet 1.985x we have a 50% chance of winning (again,
                     ignoring 0x busts), and so the house edge is:
                 </p>
                 <p>
-                    <code>100 - (1.99 * 50) = 100 - 99.5 = 0.5%</code>
+                    <code>100 - (1.985 * 50) = 100 - 99.25 = 0.75%</code>
                 </p>
                 <p>
-                    The extra 0.01 that gets added on to the multiplier is half of the 1%
-                    that was taken off in this case, leaving the house edge at 0.5%. As
-                    the multiplier gets bigger, the 1% that is taken off gets bigger, and
-                    the 0.01x that gets added on becomes less and less significant,
-                    causing the house edge to tend to 1%
+                    The extra 0.015 that gets added on to the multiplier is half of the 1.5%
+                    that was taken off in this case, leaving the house edge at 0.75%. As
+                    the multiplier gets bigger, the 1.5% that is taken off gets bigger, and
+                    the 0.015x that gets added on becomes less and less significant,
+                    causing the house edge to tend to 1.5%
                 </p>
             </dd>
             <dd>
