--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -42,9 +42,8 @@
         <div class="small-10 columns sets-content">
             <h4>Request A Withdrawal</h4>
             <p class="small">
-                **The minimum amount for a withdrawal is 200 bits. You will receive 100 bits less than what you withdraw,
-                as we use that 100 bits to go towards mining fee. As required, we will as well chip in with our money to
-                help expedite confirmation time.
+                **The minimum amount for a withdrawal is 1 NXT. You will receive 1 NXT less than what you withdraw,
+                as we use that 1 NXT to go towards network fee.
             </p>
 
             <p>
@@ -52,8 +51,8 @@
                 that uses the sending address, or returns to sender, because any returns will probably be credited to a different player.
             </p>
             <form action="/withdraw-request" method="post">
-                <label for="amount">Bits amount</label>
-                <input type="number" id="amount" name="amount" placeholder="200" min="200" step=".01" required/>
+                <label for="amount">NXT</label>
+                <input type="number" id="amount" name="amount" placeholder="1" min="1" step=".01" required/>
                 <label for="destination">Destination Address</label>
                 <input type="text" id="destination" name="destination" required/>
                 <label for="password">Your password</label>
