--- a/views/guide.html
+++ b/views/guide.html
@@ -16,7 +16,7 @@
     <p>
         Right off the bat, there's a <b>1%</b> chance of the game instantly busting. If this happens, no one can win anything.
         This means nxtbubble.com has an expected return of <code>1% * playersInGame * tableAmount</code>. This is the <b>exact amount</b>
-        bustabit uses to give out bonuses.
+        NXTBubble uses to give out bonuses.
     </p>
 
     <h4>House Edge</h4>
