--- a/views/faq.html
+++ b/views/faq.html
@@ -12,7 +12,7 @@
                 <li><a href="#bits">What is a NXT?</a></li>
                 <li><a href="#giveaway">How can I get free NXT?</a></li>
                 <li><a href="#deposit">How do I deposit NXT?</a></li>
-                <li><a href="#deposit-address">How long is the deposit address valid for?</a></li>
+                <li><a href="#deposit-address">How long is the unique account number valid?</a></li>
                 <li><a href="#deposit-time">How long for deposits to be credited to account?</a></li>
                 <li><a href="#withdraw">How do I withdraw bits?</a></li>
                 <li><a href="#gross-profit">What is Gross Profit?</a></li>
@@ -67,21 +67,15 @@
             <dd>
                 <b><a name="deposit"></a>How do I deposit NXT?</b>
                 <p>
-                    NEEDS EDITING!!!!!
-                    You will need to transfer bitcoins to the deposit address on your account page. If you do not have any bitcoins,
-                    we can recommend <a href="https://coinbase.com">Coinbase</a> if you are in the US (although the registration process
-                    is lengthy). Another great option is <a href="https://localbitcoins.com/">LocalBitcoins.com</a>, which lists traders in your area
-                    willing to sell (or buy) bitcoins. You can also search online to see if there are any
-                    bitcoin ATMs near you. And remember, you can withdraw directly to the bitcoin address on
-                    your account page!
+                    Go to your Account and you will find a NXT address and unique account number. When sending NXT to this address, you <strong>MUST</strong>
+                    include this number as an <strong>unencrypted message</strong> when sending the payment. So you can't send directly from an exchange!
                 </p>
             </dd>
             <dd>
-                <b><a name="deposit-address"></a>How long is the deposit address valid?</b>
+                <b><a name="deposit-address"></a>How long is the unique account number valid?</b>
                 <p>
-                    NEEDS EDITING
                     It is <strong>permanently</strong> attached to your account. You can save it, or use it for automatic
-                    funding, or whatever else you like. All payments to this address will be automatically credited to your account.
+                    funding, or whatever else you like. All payments sent to our address, that contain the unique account number, will be automatically credited to your account.
                 </p>
             </dd>
             <dd>
@@ -144,7 +138,7 @@
                 <b><a name="last"></a>What is the bonus?</b>
                 <p>
                     The bonus is a special prize that is awarded to the last people to cash out before the game busted. Getting the bonus
-                    is critical to skillful playing of bustabit, as it is the <strong>only</strong> way to overcome house odds.
+                    is critical to skillful playing of NXTBubble, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
                 <p>1% of each player's stake goes into the bonus pot. So if there are 4 players, betting 400, 300, 200, and 100, there will be 10 NXT in the pot.
                     If the biggest player wins, he gets the whole pot. The site works out the rate he would be getting if he won, ie. 400 NXT bet gives 10 NXT bonus
