Fix missing value and added favicons

--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -62,7 +62,7 @@
                     <input type="text" id="otp" name="otp" autocomplete="off" pattern="[0-9]{6}" required />
                 {{?}}
                 <a href="/withdraw" class="border-button ">Back</a>
-                <input class="border-button right blue" type="submit"/>
+                <input class="border-button right blue" value="Withdraw" type="submit"/>
                 <input type="hidden" name="withdrawal_id" value="{{= it.id}}" />
             </form>
         </div>
