--- a/views/deposit.html
+++ b/views/deposit.html
@@ -44,7 +44,7 @@
                     <table>
                         <thead>
                             <tr>
-                                <td>Bits</td>
+                                <td>NXT</td>
                                 <td>Transaction</td>
                                 <td class="show-for-medium-up">Created</td>
                             </tr>
@@ -53,7 +53,7 @@
                             {{~it.user.deposits :deposit:index}}
                                 <tr>
                                     <td>{{#def.format: {n: deposit.amount, decimals: 2 } }}</td>
-                                    <td><a href="https://www.blocktrail.com/tx/{{=deposit.txid}}" target="_blank">link</a></td>
+                                    <td><a href="http://nxtportal.org/transactions/{{=deposit.txid}}" target="_blank">link</a></td>
                                     <td class="show-for-medium-up">{{=deposit.created}}</td>
                                 </tr>
                             {{~}}
