--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
         <div class="i-content">
             <div class="row">
                 <h4 class="sub-title">
-                    The Gambling Game
+                    The NXT Gambling Game
                 </h4>
             </div>
             <div class="large-12 columns">
@@ -51,7 +51,7 @@
                     <p class="text">
                         Offline storage<br>
                         <a href="faq#fair">Provably fair</a><br>
-                        Razor thin <a href="faq#odds">house edge</a> (between 0 and 1%)
+                        Razor thin <a href="faq#odds">house edge</a> (between 0 and 1.5%)
                     </p>
                 </div>
                 <div class="feature columns large-3 small-6">
@@ -113,7 +113,7 @@
                 </div>
 
             </div>
-            <h5 class="faucet">Claim 2 free bits an hour, so you can always play for fun and without commitment!</h5>
+            <h5 class="faucet">Claim 0.02 free NXT every minute, so you can always play for fun and without commitment!</h5>
         </div>
     </div>
 #}}
