--- a/views/request.html
+++ b/views/request.html
@@ -1,4 +1,4 @@
-{{##def.page_title = 'Request Free Bits' #}}
+{{##def.page_title = 'Request Free NXT' #}}
 
 {{##def.content:
 <div class="content row panel radius">
@@ -27,9 +27,9 @@
             </ul>
         </div>
         <div class="small-10 columns sets-content">
-            <h5>Request Free Bits</h5>
+            <h5>Request Free NXT</h5>
                 {{?typeof it.user.eligible !== 'number'}}
-                    <p class="small ">**Every hour you are able to request 2 free bits, just claim them!</p>
+                    <p class="small ">**Every minute you are able to request 0.02 free NXT, just claim them!</p>
                     <form class="giveaway-form" action="/request" method="post">
                         <script type="text/javascript">
                             var RecaptchaOptions = {
@@ -61,7 +61,7 @@
                                value="manual_challenge"/>
                     </noscript>
                 {{??}}
-                    <h4>You will be eligible for a free 2 bits in {{=it.user.eligible}} minutes</h4>
+                    <h4>You will be eligible for free 0.02 NXT in {{=it.user.eligible}} minutes</h4>
                 {{?}}
         </div>
     </div>
