--- a/views/stats.html
+++ b/views/stats.html
@@ -4,7 +4,7 @@
     <div class="content row panel radius">
         <div class="row">
             <div class="large-6 columns">
-                <h5>Bustabit.com Statistics</h5>
+                <h5>NXTBubble.com Statistics</h5>
                 <small>Generated {{! it.generated }}</small>
                 <table class="stats">
                     <tbody>
@@ -30,15 +30,15 @@
 
                         <tr>
                             <td><b>Deposits:</b></td>
-                            <td>{{#def.format: {n: it.stats.deposits.sum} }} bits</td>
+                            <td>{{#def.format: {n: it.stats.deposits.sum} }} NXT</td>
                         </tr>
                         <tr>
                             <td><b>Withdrawals:</b></td>
-                            <td>{{#def.format: { n: it.stats.withdrawals.sum } }} bits</td>
+                            <td>{{#def.format: { n: it.stats.withdrawals.sum } }} NXT</td>
                         </tr>
                         <tr>
                             <td class="strong">Net:</td>
-                            <td class="strong">{{#def.format: { n: (it.stats.deposits.sum - (it.stats.withdrawals.sum * -1)) } }} bits</td>
+                            <td class="strong">{{#def.format: { n: (it.stats.deposits.sum - (it.stats.withdrawals.sum * -1)) } }} NXT</td>
                         </tr>
                         <tr>
                             <td></td>
@@ -46,30 +46,30 @@
                         </tr>
                         <tr>
                             <td><b>Total Wagered:</b></td>
-                            <td>{{#def.format: {n: it.stats.plays.total_bet } }} bits</td>
+                            <td>{{#def.format: {n: it.stats.plays.total_bet } }} NXT</td>
                         </tr>
                         <tr>
                             <td><b>Players won in cashed:</b></td>
-                            <td>{{#def.format: {n: it.stats.plays.cashed_out } }} bits <small>(
+                            <td>{{#def.format: {n: it.stats.plays.cashed_out } }} NXT <small>(
                                    {{= (it.stats.plays.cashed_out / it.stats.plays.total_bet * 100).toFixed(2) }}%
                                 )</small></td>
                         </tr>
                         <tr>
                             <td><b>Players won in bonuses:</b></td>
-                            <td>{{#def.format: {n: it.stats.plays.bonused } }} bits <small>(
+                            <td>{{#def.format: {n: it.stats.plays.bonused } }} NXT <small>(
                                 {{= (it.stats.plays.bonused / it.stats.plays.total_bet * 100).toFixed(2) }}%
                                 )</small></td>
                         </tr>
                         <tr>
                             <td><b>Players won in total: </b></td>
-                            <td>{{#def.format: {n: (9 + it.stats.plays.cashed_out + it.stats.plays.bonused) } }} bits <small>(
+                            <td>{{#def.format: {n: (9 + it.stats.plays.cashed_out + it.stats.plays.bonused) } }} NXT <small>(
                                 {{= ((it.stats.plays.cashed_out + it.stats.plays.bonused) / it.stats.plays.total_bet * 100).toFixed(2) }}%
                                 )</small></td>
                         </tr>
                         <tr>
                             <td class="strong">Our Profit:</td>
                             <td class="strong">
-                                {{#def.format: {n: it.stats.plays.total_bet - it.stats.plays.cashed_out - it.stats.plays.bonused  } }} bits
+                                {{#def.format: {n: it.stats.plays.total_bet - it.stats.plays.cashed_out - it.stats.plays.bonused  } }} NXT
                                 <small>(
                                     {{= ((it.stats.plays.total_bet - it.stats.plays.cashed_out - it.stats.plays.bonused ) / it.stats.plays.total_bet * 100).toFixed(2) }}%
                                     )</small>
@@ -82,13 +82,13 @@
                         <tr>
                             <td class="strong">Bankroll:</td>
                             <td class="strong">
-                                {{#def.format: {n: it.stats.plays.total_bet - it.stats.plays.cashed_out - it.stats.plays.bonused + it.stats.bankroll_offset } }} bits
+                                {{#def.format: {n: it.stats.plays.total_bet - it.stats.plays.cashed_out - it.stats.plays.bonused + it.stats.bankroll_offset } }} NXT
                             </td>
                         </tr>
                         <tr>
                             <td class="strong">Max win per game:</td>
                             <td>
-                                {{#def.format: {n: (it.stats.plays.total_bet - it.stats.plays.cashed_out - it.stats.plays.bonused + it.stats.bankroll_offset)*0.03 } }} bits
+                                {{#def.format: {n: (it.stats.plays.total_bet - it.stats.plays.cashed_out - it.stats.plays.bonused + it.stats.bankroll_offset)*0.03 } }} NXT
                             </td>
                         </tr>
                         <tr>
