--- a/views/withdraw.html
+++ b/views/withdraw.html
@@ -46,7 +46,7 @@
                 <table>
                     <thead>
                         <tr>
-                            <td>Bits</td>
+                            <td>NXT</td>
                             <td>Destination Address</td>
                             <td>Status</td>
                             <td class="show-for-large-up">Created</td>
