--- a/views/account.html
+++ b/views/account.html
@@ -57,7 +57,9 @@
                 </div>
             </div>
             <br>
-            <a class="border-button blue right"href="/user/{{=it.user.username}}">Public Profile</a>
+            <a class="border-button blue right"href="/user/{{=it.user.username}}">Your Public Profile</a>
+            <br>
+            <br>
             <h5>Account Information</h5>
             <div id="statistics" class="row">
                 <div class="columns data large-3">
