--- a/views/template/header.html
+++ b/views/template/header.html
@@ -16,7 +16,7 @@
             <div class="show-for-small-up user-login">
             {{?it.user}}
                 <a href="/play">Play now!</a>
-                <div class="balance-bits">Bits: <span id="balance_bits">{{#def.format:{n: it.user.balance_satoshis, decimals:2} }}</span></div>
+                <div class="balance-bits">      NXT Balance: <span id="balance_bits">{{#def.format:{n: it.user.balance_satoshis, decimals:2} }}</span></div>
                 <div class="username"><a href="/account">{{=it.user.username}}</a></div>
             {{??}}
                 <a href="/play">Play now!</a>
