--- a/views/account.html
+++ b/views/account.html
@@ -45,7 +45,7 @@
                 <b>Deposit Address:</b>
                 <span>{{=it.user.deposit_address}}</span>
                 <br/>
-                <strong>You must attach a message with this number: "{{=it.user.id}}"</strong>
+                <strong>You must attach a message with this number: "{{=it.user.id}}"<br></strong>
                 <strong>If you fail to do so, the deposit can't be added to your account.</strong>
             </p>
             <div class="row">
