--- a/views/account.html
+++ b/views/account.html
@@ -46,7 +46,7 @@
                 <span>{{=it.user.deposit_address}}</span>
                 <br/>
                 <strong>You must attach a message with this number: "{{=it.user.id}}"<br></strong>
-                <strong>If you fail to do so, the deposit can't be added to your account.</strong>
+                <strong>If you fail to do so, the deposit can't be added<br> to your account.</strong>
             </p>
             <div class="row">
                 <div class="large-6 columns">
