--- a/views/guide.html
+++ b/views/guide.html
@@ -21,7 +21,7 @@
 
     <h4>House Edge</h4>
     <p>
-        It scales between 0 and 1.5% <small><a href="/calculator" target="_blank">see: odds and calculator.</a></small>
+        It scales between 0 and 1.5% <a href="/calculator" target="_blank">see: odds and calculator.</a>
         This is what you need to overcome!
     </p>
 
