--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-{{##def.page_title = 'The Social Bitcoin Gambling Game' #}}
+{{##def.page_title = 'The Social NXT Gambling Game' #}}
 
 {{##def.content:
     <div class="index">
