--- a/views/template/main.html
+++ b/views/template/main.html
@@ -1,4 +1,4 @@
-{{##def.format:param:{{=(param.n/100000000).toFixed(param.decimals).toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1,")}}#}}
+{{##def.format:param:{{=(param.n/100000000).toFixed(param.decimals).toString()}}#}}
 
 <!DOCTYPE html>
 <html>
