--- a/views/game.html
+++ b/views/game.html
@@ -4,7 +4,7 @@
     <div class="row panel radius">
         <h4>Game #<strong>{{=it.game.id}}</strong> information</h4>
         <p>
-            <b>Busted At: </b> {{#def.format: { n: it.game.game_crash, decimals: 2 } }}x
+            <b>Busted At: </b> {{#def.format: { n: it.game.game_crash * 1e6, decimals: 2 } }}x
         </p>
         <p>
             <b>Played: </b>{{=it.game.created}} <small>{{=it.game.timeago}}</small>
@@ -34,14 +34,14 @@
                     </td>
                     <td>
                         {{? play.cash_out}}
-                        {{#def.format: {n: play.cash_out / play.bet * 100, decimals: 4} }}x
+                        {{#def.format: {n: play.cash_out / play.bet * Math.pow(10,8), decimals: 4} }}x
                         {{??}}
                         Lose
                         {{?}}
                     </td>
                     <td>
                         {{? play.bonus }}
-                           {{#def.format: {n: play.bonus/play.bet* 100 * 100, decimals: 4} }}%
+                           {{#def.format: {n: play.bonus/play.bet* 100 * Math.pow(10,8), decimals: 2} }}%
                         {{??}}
                           -
                         {{?}}
