--- a/views/game.html
+++ b/views/game.html
@@ -30,7 +30,7 @@
                         </strong>
                     </td>
                     <td>
-                        {{#def.format: { n: play.bet } }} NXT
+                        {{#def.format: { n: play.bet, decimals: 2 } }} NXT
                     </td>
                     <td>
                         {{? play.cash_out}}
