Added deposit warning image

--- a/views/account.html
+++ b/views/account.html
@@ -65,6 +65,7 @@
                 <strong><a href="/faq#deposit">
                     <small>more?</small>
                 </a></strong>
+                <img src="/img/deposit-warning.png" style="margin-top: 15px;" />
             </div>
             <br/>
 
