--- a/views/support.html
+++ b/views/support.html
@@ -40,23 +40,11 @@
             </ul>
         </div>
         <div class="small-10 columns sets-content">
-            <h5>Need help? please contact us</h5>
+            <h5>Need help? Please contact us</h5>
                 <hr>
-                <div class="row contact">
-                    <form action="/support" id="contact" method="post">
-
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" value="{{!it.user.email}}" required=""/>
-
-
-
-                        <label for="message">Message</label>
-                        <textarea rows="10" id="message" name="message" required> </textarea>
-                        <input type="submit" class="border-button right blue" value="Send!"/>
-                    </form>
-
+                <div class="contact">
+                  Contact: <a href="mailto:{{=it.contact}}">{{=it.contact}}</a>
                 </div>
-
         </div>
     </div>
 </div>
