--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -55,7 +55,7 @@
                 <input type="number" id="amount" name="amount" placeholder="1" min="1" step=".01" required/>
                 <label for="destination">Destination Address</label>
                 <input type="text" id="destination" name="destination" required/>
-                <label for="password">Your password</label>
+                <label for="password">Your NXTBubble password</label>
                 <input type="password" id="password" name="password" autocomplete="off"/>
                 {{?it.user.mfa_secret}}
                     <label for="otp">2FA Code</label>
