--- a/views/index.html
+++ b/views/index.html
@@ -111,11 +111,43 @@
                         </p>
                     </div>
                 </div>
-
             </div>
             <h5 class="faucet">Claim 0.02 free NXT every minute, so you can always play for fun and without commitment!</h5>
+            <div class="features row show-for-large-up" style="margin-bottom: 100px;">
+                <div class="feature columns large-4 small-6">
+                    <div>
+                      <a href="https://github.com/TwinWinNerD/bustabit-gameserver" target="_blank">
+                        <img src="img/icons/github.png" alt=""/>
+                      </a>
+                    </div>
+                    <p class="text" style="margin-top: 20px;">
+                      Source code by Bustabit
+                    </p>
+                </div>
+                <div class="columns large-4 small-6">
+                    <div>
+                      <a href="http://nxt.org/" target="_blank">
+                        <img src="img/icons/nxtinside.png" alt=""/>
+                      </a>
+                    </div>
+                    <p class="text" style="margin-top: 20px;">
+                      Powered by NXT
+                    </p>
+                </div>
+                <div class="feature columns large-4 small-6">
+                    <div style="margin: 30px;">
+                      <a href="http://nxtcs.com/" target="_blank" style="color: black;">
+                        <span style="font-size: 300%; font-weight: bold;">
+                          NXTCS
+                        </span>
+                      </a>
+                    </div>
+                    <p class="text" style="padding-top: 12px;">
+                      Powered by NXTCS
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 #}}
 {{#def.include('./template/main')}}
-
