Change links in header

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -17,11 +17,16 @@
             {{?it.user}}
                 <div class="balance-bits">NXT: <span id="balance_bits">{{#def.format:{n: it.user.balance_satoshis, decimals:4} }}</span></div>
                 <div class="username"><a href="/account">{{=it.user.username}}</a></div>
-                <div class="username"><a href="/play">Play</a></div>
-                <div class="username"><a href="/request">Faucet</a></div>
-                <div class="username"><a href="/leaderboard">Leaderboard</a></div>
-                <div class="username"><a href="/faq">FAQ</a></div>
+                <a href="/play">Play</a>
+                <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
+                <a href="/request">Faucet</a>
+                <a href="/leaderboard">Leaderboard</a>
+                <a href="/faq">FAQ</a>
             {{??}}
+                <a href="/play">Play</a>
+                <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
+                <a href="/leaderboard">Leaderboard</a>
+                <a href="/faq">FAQ</a>
                 <a href="/register">Register</a>
                 <a href="/login">Log in</a>
             {{?}}
