--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -15,10 +15,19 @@
                     Player
                 </td>
                 <td class="ldb-gross">
-                    {{?it.sortBy != 'gross_profit'}}<a href="/leaderboard"><i class="fa fa-sort-desc"></i></a>{{?}} Gross Profit <strong><a href="/faq#gross-profit">?</a></strong>
+                    {{?it.sortBy != 'gross_profit' || it.order != 'DESC'}}
+                    <a href="/leaderboard?by=gross_desc"><i class="fa fa-sort-desc"></i></a>
+                    {{?}}
+                    Gross Profit <strong><a href="/faq#gross-profit">?</a></strong>
                 </td>
                 <td class="ldb-net">
-                    {{?it.sortBy != 'net_profit' || it.order != 'DESC' }}<a href="/leaderboard?by=net_desc"><i class="fa fa-sort-desc"></i></a>{{?}} Net Profit {{?it.sortBy != 'net_profit' || it.order != 'ASC' }}<a href="/leaderboard?by=net_asc"><i class="fa fa-sort-asc"></i></a>{{?}}
+                    {{?it.sortBy != 'net_profit' || it.order != 'DESC' }}
+                      <a href="/leaderboard?by=net_desc"><i class="fa fa-sort-desc"></i></a>
+                    {{?}}
+                      Net Profit
+                    {{?it.sortBy != 'net_profit' || it.order != 'ASC' }}
+                    <a href="/leaderboard?by=net_asc"><i class="fa fa-sort-asc"></i></a>
+                    {{?}}
                 </td>
             </tr>
         </thead>
