--- a/views/template/header.html
+++ b/views/template/header.html
@@ -21,11 +21,13 @@
                 <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
                 <a href="/request">Faucet</a>
                 <a href="/leaderboard">Leaderboard</a>
+                <a href="/stats">Stats</a>
                 <a href="/faq">FAQ</a>
             {{??}}
                 <a href="/play">Play</a>
                 <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
                 <a href="/leaderboard">Leaderboard</a>
+                <a href="/stats">Stats</a>
                 <a href="/faq">FAQ</a>
                 <a href="/register">Register</a>
                 <a href="/login">Log in</a>
