--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,7 @@
                     <p class="text">
                         Offline storage<br>
                         <a href="faq#fair">Provably fair</a><br>
-                        Razor thin <a href="faq#odds">house edge</a> (between 0 and 1.5%)
+                        Razor thin <a href="faq#odds">house edge</a> (between 0.5% and 1.5%)
                     </p>
                 </div>
                 <div class="feature columns large-3 small-6">
