--- a/views/guide.html
+++ b/views/guide.html
@@ -14,15 +14,15 @@
 
     <h4>Instabust</h4>
     <p>
-        Right off the bat, there's a <b>1%</b> chance of the game instantly busting. If this happens, no one can win anything.
-        This means nxtbubble.com has an expected return of <code>1% * playersInGame * tableAmount</code>. This is the <b>exact amount</b>
-        NXTBubble uses to give out bonuses.
+        Right off the bat, there's a <b>1.5%</b> chance of the game instantly busting. If this happens, no one can win anything.
+        This means nxtbubble.com has an expected return of <code>1.5% * playersInGame * tableAmount</code>. NXTBubble gives out 1% in bonuses
+        each round to create the competitiveness of the game.
     </p>
 
     <h4>House Edge</h4>
     <p>
-        It scales between 0 and 1.5% <a href="/calculator" target="_blank">see: odds and calculator.</a>
-        This is what you need to overcome!
+        It scales between 0 and 1% <a href="/calculator" target="_blank">see: odds and calculator.</a>
+        The 0.5% of the instabust and this is what you need to overcome!
     </p>
 
     <h4>Bonuses</h4>
